refactor: Bug fix in swagger comments
