# backend/cmd/api/auth.go
@@ -32,7 +32,7 @@ type LoginUserPayload struct {
 //	@Failure		400		{object}	error
 //	@Failure		401		{object}	error
 //	@Failure		500		{object}	error
-//	@Router			/authentication/token [post]
+//	@Router			/authentication/login [post]
 func (app *application) loginUserHandler(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
 	var payload LoginUserPayload
@@ -49,16 +49,13 @@ func (app *application) loginUserHandler(w http.ResponseWriter, r *http.Request)
 	if err != nil {
 		switch {
 		case errors.Is(err, store.ErrNotFound):
-			// 🔒 Masked error: Do NOT leak if email exists or not
 			app.UnAuthorized(w, r, errors.New("invalid credentials"))
 		default:
 			app.InternalServerError(w, r, err)
 		}
 		return
 	}
-	// 2. Compare payload password with hashed password in DB
 	if err := user.Password.Compare(payload.Password); err != nil {
-		// 🔒 Masked error: Same generic message for wrong password
 		app.UnAuthorized(w, r, errors.New("invalid credentials"))
 		return
 	}
